# Agentic-AI-Course-Resources

./: Agentic_AI_Course_Slides (13).pptx  Agentic_AI_Course_Slides.pptx  prompt-engineering-examples.txt
Track-1-Agentic-AI-Projects/Client-Negotiation-Practice-Agent/backend/: .env.example  API.md  agent.py  config.py  main.py  prompts.py  pyproject.toml
Track-1-Agentic-AI-Projects/Client-Negotiation-Practice-Agent/frontend/: API.md  next.config.ts  package-lock.json
Track-1-Agentic-AI-Projects/Client-Negotiation-Practice-Agent/frontend/app/: globals.css  layout.tsx
Track-1-Agentic-AI-Projects/Client-Negotiation-Practice-Agent/frontend/app/api/chat/: route.ts
Track-1-Agentic-AI-Projects/Client-Negotiation-Practice-Agent/frontend/app/components/: Chat.tsx  Markdown.tsx  icons.tsx
